adding event triggering example

--- a/examples/notebooks/Events and statistics from ROIs.ipynb
+++ b/examples/notebooks/Events and statistics from ROIs.ipynb
@@ -136,39 +136,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\r\n",
-      "\t\"regions\": [\r\n",
-      "\t\t{\r\n",
-      "\t\t\t\"name\": \"upper_left\",\r\n",
-      "\t\t\t\"polygon\": [[385, 315], [676, 334], [754, 625], [668, 810], [165, 757]],\r\n",
-      "\t\t\t\"color\": [155,155,0]\r\n",
-      "\t\t},\r\n",
-      "\r\n",
-      "\t\t{\r\n",
-      "\t\t\t\"name\": \"lower_left\",\r\n",
-      "\t\t\t\"polygon\": [[11, 532], [777, 606], [666, 1073], [5, 1074]],\r\n",
-      "\t\t\t\"color\": [155,155,0]\r\n",
-      "\t\t},\r\n",
-      "\r\n",
-      "\t\t{\r\n",
-      "\t\t\t\"name\": \"upper_right\",\r\n",
-      "\t\t\t\"polygon\": [[1057, 336], [908, 682], [954, 773], [1522, 754], [1565, 595], [1210, 305]],\r\n",
-      "\t\t\t\"color\": [155,0,155]\r\n",
-      "\t\t},\r\n",
-      "\r\n",
-      "\t\t{\r\n",
-      "\t\t\t\"name\": \"lower_right\",\r\n",
-      "\t\t\t\"polygon\": [[973, 1072], [949, 625], [1749, 538], [1904, 1068]],\r\n",
-      "\t\t\t\"color\": [155,0,155]\r\n",
-      "\t\t},\r\n",
-      "\r\n",
-      "\r\n",
-      "\t\t{\r\n",
-      "\t\t\t\"name\": \"winch\",\r\n",
-      "\t\t\t\"polygon\": [[1088, 369], [592, 382], [570, 580], [1131, 584]],\r\n",
-      "\t\t\t\"color\": [0,255,0]\r\n",
-      "\t\t}\r\n",
-      "\t]\t\t\r\n",
+      "{\n",
+      "\t\"regions\": [\n",
+      "\t\t{\n",
+      "\t\t\t\"name\": \"upper_left\",\n",
+      "\t\t\t\"polygon\": [[385, 315], [676, 334], [754, 625], [668, 810], [165, 757]],\n",
+      "\t\t\t\"color\": [155,155,0]\n",
+      "\t\t},\n",
+      "\n",
+      "\t\t{\n",
+      "\t\t\t\"name\": \"lower_left\",\n",
+      "\t\t\t\"polygon\": [[11, 532], [777, 606], [666, 1073], [5, 1074]],\n",
+      "\t\t\t\"color\": [155,155,0]\n",
+      "\t\t},\n",
+      "\n",
+      "\t\t{\n",
+      "\t\t\t\"name\": \"upper_right\",\n",
+      "\t\t\t\"polygon\": [[1057, 336], [908, 682], [954, 773], [1522, 754], [1565, 595], [1210, 305]],\n",
+      "\t\t\t\"color\": [155,0,155]\n",
+      "\t\t},\n",
+      "\n",
+      "\t\t{\n",
+      "\t\t\t\"name\": \"lower_right\",\n",
+      "\t\t\t\"polygon\": [[973, 1072], [949, 625], [1749, 538], [1904, 1068]],\n",
+      "\t\t\t\"color\": [155,0,155]\n",
+      "\t\t},\n",
+      "\n",
+      "\n",
+      "\t\t{\n",
+      "\t\t\t\"name\": \"winch\",\n",
+      "\t\t\t\"polygon\": [[1088, 369], [592, 382], [570, 580], [1131, 584]],\n",
+      "\t\t\t\"color\": [0,255,0]\n",
+      "\t\t}\n",
+      "\t]\t\t\n",
       "}"
      ]
     }
@@ -462,7 +462,7 @@
     "# 3.5 ROI object counter\n",
     "pipeline.add_component( ROIPresenceCounter(\"roi_counter\",context,filename=ROI_DEFINITION_FILE) )\n",
     "\n",
-    "# 3.5 ROI object counter\n",
+    "# 3.5 Display variables on display\n",
     "pipeline.add_component( TextOverlay(\"stats_text\",context, \n",
     "                                    text=\"Upper left: {q_upper_left}\\n\"\n",
     "                                         \"Lower left: {q_lower_left}\\n\"\n",
@@ -563,6 +563,95 @@
    "outputs": [],
    "source": [
     "#FIXME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98473a63-7333-4938-93f2-2d4d6a2c2cdb",
+   "metadata": {},
+   "source": [
+    "### Pipeline instantiation and execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24a98938-facd-4130-b73b-566ececd78ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEEPSORT_MODEL_FILENAME = DATA_PATH+\"object_tracking/mars-small128.pb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14dcbb80-f3be-4852-9ef2-ea278d6ba7b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from videoanalytics.pipeline.sinks.object_tracking.deepsort import DeepSORT\n",
+    "\n",
+    "# 1. Create the global context\n",
+    "context = {}\n",
+    "\n",
+    "# 2. Create the pipeline\n",
+    "pipeline = Pipeline()\n",
+    "\n",
+    "# 3. Add components\n",
+    "\n",
+    "# 3.1 Source\n",
+    "pipeline.add_component( VideoReader( \"input\",context,\n",
+    "                 video_path=INPUT_VIDEO,\n",
+    "                 start_frame=START_FRAME,\n",
+    "                 max_frames=MAX_FRAMES))\n",
+    "\n",
+    "# 3.2 ROI viewer\n",
+    "pipeline.add_component( ROIView(\"roi_view\",context,filename=ROI_DEFINITION_FILE,alpha=0.6 ) )\n",
+    "\n",
+    "# 3.3 Detector\n",
+    "pipeline.add_component( YOLOv4DetectorTF(\"detector\",context,weights_filename=DETECTOR_WEIGHTS_FILENAME) )\n",
+    "\n",
+    "# 3.4 Tracker (DeepSORT)\n",
+    "pipeline.add_component( DeepSORT(\"tracker\",context,model_filename=DEEPSORT_MODEL_FILENAME) )\n",
+    "pipeline.add_component( TrackedObjectsAnnotator(\"tracker_annotator\",context) )\n",
+    "\n",
+    "# 3.5 Sink\n",
+    "pipeline.add_component(VideoWriter(\"writer\",context,filename=OUTPUT_VIDEO))\n",
+    "\n",
+    "# 4. Define connections\n",
+    "pipeline.set_connections([\n",
+    "    (\"input\", \"roi_view\"),\n",
+    "    (\"roi_view\", \"detector\"),\n",
+    "    (\"detector\", \"tracker\"),\n",
+    "    (\"tracker\", \"tracker_annotator\"),\n",
+    "    (\"tracker_annotator\", \"writer\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e24625d0-74f1-42e8-b757-f66442c91c23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig,axes = plt.subplots(1,1,figsize=(22,8))\n",
+    "pipeline.plot(ax=axes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86febd6e-360b-4e7e-a74c-bdddb2c0cc0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Execute\n",
+    "pipeline.execute()\n",
+    "print(\"Total execution time [s]:\", pipeline.get_total_execution_time())"
    ]
   }
  ],
