--- a/docs/Integration with databases.ipynb
+++ b/docs/Integration with databases.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b1691412",
    "metadata": {
     "scrolled": true
@@ -438,7 +438,9 @@
    "source": [
     "## Integration with ElasticSearch\n",
     "\n",
-    "ElasticSearch is a Database designed for fast insertion and query of JSON documents. A typical application is to store events. In this case, a component is dedicated to store the detections in one step: `DetectionsESWriter`."
+    "ElasticSearch is a Database designed for fast insertion and query of JSON documents. A typical application is to store events. \n",
+    "\n",
+    "In this case, as specific component is dedicated to store the detections in one step: `DetectionsESWriter`."
    ]
   },
   {
@@ -638,7 +640,7 @@
    "source": [
     "### Exploration of results\n",
     "\n",
-    "Advanced queries allow the identification of interesting sections of footage. Elasticsearch supports a query language with a similar syntax to SQL."
+    "Advanced queries allow the identification of interesting sections of footage. Elasticsearch supports a [query language with a similar syntax to SQL](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl.html)."
    ]
   },
   {
